# pcap_splitter

./: Cargo.toml  README.md
input/: randpkt.pcap
src/: main.rs
