[package]
name = "pcap_splitter"
version = "0.1.0"
authors = ["Rodolfo Camara Villordo <rodvill@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
pcap = "0.8.1"
tokio = { version = "1.5.0", features = ["full"] }
